[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ferrum-sdk"
version = "0.1.0"
description = "Typed third-party SDK for the Ferrum sovereign blockchain (wraps substrate-interface)."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
dependencies = [
    "substrate-interface>=1.7.10",
]

[tool.setuptools.packages.find]
include = ["ferrum_sdk*"]
