[package]
name = "ferrum-sdk"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Typed third-party SDK for the Ferrum sovereign blockchain (wraps subxt)."

[dependencies]
subxt = { version = "0.38", features = ["native"] }
subxt-signer = { version = "0.38", features = ["sr25519", "subxt"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
hex = "0.4"
anyhow = "1"

[dev-dependencies]
blake2 = "0.10"

[[example]]
name = "quickstart"
path = "examples/quickstart.rs"
